fix mobile overflow

--- a/src/components/Layout/layout.module.scss
+++ b/src/components/Layout/layout.module.scss
@@ -16,7 +16,7 @@
   @media screen and (max-width: 480px) {
     max-width: 100%;
     width: 100%;
-    overflow-x: visible;
+    overflow-y: hidden;
   }
 }
 
